# gtest-demo

./: .travis.yml  CMakeLists.txt
